# fin-us

./: .dockerignore  .gitignore  README.md  architecture.md  docker-compose.yml  reproduce_analyze.py  reproduce_issue.py  test_trend.py
.agents/skills/architecture-visualizer/: SKILL.md  visualizer.py
.agents/skills/pr-creater/: SKILL.md
.agents/skills/pr-reviewer/: SKILL.md
.agents/skills/pr-reviewer/references/: review-checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report_ko.yml  feature_request_ko.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  requirements.txt  schemas.py  services.py
backend-express/: Dockerfile  index.js  package-lock.json  package.json  tsconfig.json
backend-express/src/: index.ts
backend/agents/: news_analyst.yaml  orchestrator.yaml  trading_executor.yaml
backend/core/: agent.py
fin-us/: .dockerignore  .gitignore
fin-us/backend/: .env.example  Dockerfile  main.py  pyproject.toml
fin-us/frontend-react/: .dockerignore  vite.config.ts
fin-us/frontend-react/src/: App.tsx
fin-us/mcp-news/: Dockerfile  index.js
fin-us/mcp-trading/: .env.example  Dockerfile  index.js
fin-us/scripts/: bootstrap_from_reference.sh  install_fin_us_mcp.sh
fin-us/scripts/templates/: main_integrated.py  pyproject_integrated.toml  requirements_integrated.txt
finus_nat/: .env.example  .gitignore  Dockerfile  package-lock.json  pyproject.toml
finus_nat/configs/: common.yml  router.yml
finus_nat/configs/agents/: diary_agent.yml  monitoring_agent.yml  news_agent.yml  recommend_agent.yml  strategy_agent.yml  trading_agent.yml
finus_nat/docs/: Kis_Trading_MCP_API_166.xlsx  open-trading-api-cursor-to-finus-nat.md
finus_nat/scripts/: chat_repl.py  install_vendor_fin_us.sh  run.sh
finus_nat/src/nat_finus_nat/: __init__.py  branch.py  finus_api.py  finus_paths.py  register.py  stub.py  supervisor.py
finus_nat/tests/: test_import.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend-react/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend-react/src/components/: ErrorDisplay.tsx  Header.tsx  MainDashboard.tsx  ReportSidebar.tsx  SearchForm.tsx
frontend-react/src/hooks/: useFinUsDashboard.ts
frontend-react/src/utils/: parsers.ts
frontend/Assets/02_Scripts/: FinUsApiClient.cs  FinUsApiModels.cs  FinUsDashboardUiController.cs  FinUsTrendParser.cs
frontend/Assets/04_UI/: FinUsDashboard.uxml
frontend/Assets/React(Legacy)/: FinUsDashboard.uss  FinUsDashboard.uxml  FinUsDashboardUiController.cs  FrontendTestScene.unity
frontend/Assets/Scenes/: DashboardScreenScene.unity  SampleScene.unity
frontend/Assets/Scripts/: ApiClient.cs  ApiModels.cs  DashboardUiController.cs  FinUsDashboardUiController.cs  TrendParser.cs
frontend/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
frontend/Assets/UI/: DashboardLeftColumn.uxml  DashboardRightColumn.uxml  DashboardScreen.uxml
frontend/Assets/UI Toolkit/: PanelSettings.asset
frontend/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
frontend/UIElementsSchema/: Unity.UIToolkit.Editor.xsd  UnityEditor.Experimental.GraphView.xsd
frontend/src/: App.tsx  types.ts
frontend/src/components/: EmptyState.tsx  StockHeader.tsx
legacy/: README.md
mcp-news/: .dockerignore  Dockerfile  index.js  naverResearch.js  package-lock.json  package.json
mcp-news/src/: db.js
mcp-trading/: .env.example  Dockerfile  index.js  package-lock.json  package.json
scripts/: _compose_up.sh  _env.sh  check_env.sh  install_fin_us_mcp.sh  reset_clean.sh  run_backend.sh  run_frontend.sh  run_nat.sh  run_stack.sh  setup_deps.sh
(+8 files in other folders)
