# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = ".."

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nat-finus-nat"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
description = "Fin-Us NAT example: router + six sub-agents (OpenAI default, optional Ollama, mcp-news stdio, Kis Trading MCP for balance)"
classifiers = ["Programming Language :: Python"]
dependencies = [
  "nvidia-nat[langchain,mcp]>=1.6.0,<2",
]

[project.entry-points.'nat.components']
nat_finus_nat = "nat_finus_nat.register"
